@@ -1,5 +1,10 @@
 2010-09-08  Marek Kowalski  <mkowalski@flumotion.com>
 
+        * flumotion/test/test_bouncers_multibouncer.py:
+	Tests for MultiBouncerPlug.
+
+2010-09-08  Marek Kowalski  <mkowalski@flumotion.com>
+
 	* flumotion/test/test_bouncers_multibouncer.py:
 	Typo fix, fix the build.
 
